...
                        persistenceService: persistenceService,
                        refreshService: refreshService,
                        rssService: rssService,
                        networkMonitor: networkMonitor
                    )
                    .tabItem {
                        Label("Feeds", systemImage: "dot.radiowaves.left.and.right")
                    }
                    
                    BookmarkView(
                        viewModel: BookmarkViewModel(persistenceService: persistenceService)
                    )
                    .tabItem {
...
