...
}

private struct AddFeedButton: View {
    @ObservedObject var viewModel: FeedListViewModel
    
    var body: some View {
        Button("Add") {
            viewModel.showingAddFeed = true
        }
        .fontWeight(.medium)
    }
}

...
